week-03/assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap');

body {
    margin: 25px;
    font-family: 'Roboto Mono', monospace;
}

nav {
    position: absolute;
    display: inline-block;
    right: 5%;
}

nav a {width: 40px;}

main {border-bottom: 1px solid black;}

h1 {
    color: #49a37b;
    display: inline-block;
    text-transform: uppercase;
    font-style: normal;
    font-weight: 700;
    font-size: 40px;
    line-height: 47px;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

h2 {
    color: #49a37b;
    font-size: 34px; 
}

h3 {
    font-size: 28px;
    font-weight: 400;
    color: #49a37b;  
}

h4 {
    font-size: 24px;
    font-weight: 400;
    color: #49a37b;
}

section {
    border-top: 1px solid black;
    padding-top: 50px;
    padding-bottom: 50px;
}

/*-------------------------------------*/
/*            PRESENTATIONS            */
/*-------------------------------------*/

.presentation {
    position: relative;
    display: inline-block;
}

.present-left {
    position: relative;
    display: inline-block;
    max-width: 49%;
    vertical-align: top;
}

.present-right {
    position: relative;
    display: inline-block;
    max-width: 49%;
}

.greetings {
    font-style: normal;
    text-transform: capitalize;
    font-weight: 400;
    font-size: 32px;
    line-height: 38px;
    margin-top: 20px;
    width: 90%;
}

.tagline {
    text-transform: uppercase;
    margin-top: 20px;
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 23px;  
}

.presentation-paragraph {
    margin-top: 20px;
    max-width: 90%;  
}

.button-learn {
    margin-top: 40px;
    margin-left: 40px;
    padding: 10px;
    font-style: normal;
    font-weight: 700;
    font-size: 12px;
    line-height: 19px;
    text-transform: uppercase;
    background-color: white;
    border-color: #49a37b;
    border-radius: 5px;
    text-align: center;
}

.img-gym {  
    position: relative;
    width: 100%;
}

/*-------------------------------------*/
/*            APP FUNCTIONS            */
/*-------------------------------------*/

.container-function-app {
    display: inline-block;
    width: 49%;
}

.app-function-articles {
    padding-top: 64px;
    margin-left: 30px;
    position: relative;
    display: inline-block;
}

.app-function-paragraph {
    padding-top: 5px;
    width: 100%;
}

.img-function {
    display: inline-block;
    width: 86px;
    height: 86px;
}

.description-function {
    display: inline-block;
    width: 80%;
}

/*-------------------------------------*/
/*             ABOUT US                */
/*-------------------------------------*/

.container-about {
    position: relative;
    display: inline-block;
}

.title-about { 
    position: relative;
    display: inline-block;
    top: 35px;
    left: 35px;
    max-width: 20%;
}    

.text-about-paragraph { 
    position: relative;
    display: inline-block;
    width: 70%;
    text-align: center;
    float: right;
}

/*-------------------------------------*/
/*              CONTACT                */
/*-------------------------------------*/

.contact {
    position: relative;
    display: inline-block;
    width: 100%;
}

.list-contact {
    list-style: none;
    position: relative;
    display: inline-block;
    padding-top: 30px;
    padding-left: 20px;
    max-width: 40%;
}

.reason {
    position: relative;
    display: inline-block;
    max-width: 49%; 
    float: right;
    right: 25%; 
}

.form {padding-top: 20px;}

.place {width: 300px;}

.comments {margin-top: 80px;}

.contact-button{
    width: 76px;
    height: 34px;
    background: #AACE9B;
    font-size: 12px;
    border: none;
    border-radius: 5px;
}

/*-------------------------------------*/
/*            ACTIVITIES               */
/*-------------------------------------*/

.activities {
    position: relative;
    display: inline-block;
    width: 100%;
    padding-left: 20px;
    padding-right: 20px; 
}

.activities-list {
    position: relative;
    display: inline-block;
    padding: 30px;
    max-width: 24%;
    vertical-align: top; 
}

.activities-ul {
    padding-top: 20px;
    list-style: circle;
}

.list-activities {
    padding-top: 20px;
    font-size: 12px;
}

/*-------------------------------------*/
/*               FOOTER                */
/*-------------------------------------*/

footer {
    padding-top: 100px;
    padding-bottom: 100px;
    position: relative;
    width: 100%;
    align-content: center;  
}

.container-footer {
    position: relative; 
    left: 44%;
}

.copyrigth {
    position: relative; 
    padding-top: 50px;
    margin: auto;
    left: 42%;
}

